--- a/projects/salmon-cookies/style/style.css
+++ b/projects/salmon-cookies/style/style.css
@@ -16,7 +16,12 @@ h1 {
   font-weight: bold;
   margin-top: 10px;
   color: #F06565;
+  transition: 500ms;
+}
 
+h1:hover {
+  text-shadow: 3px 3px black;
+ transition: 500ms;
 }
 
 h2 {
@@ -59,7 +64,7 @@ header>a>h1 {
 }
 
 header>nav {
-  margin-right: 40px;
+  margin-right: 10px;
   
 }
 
@@ -68,6 +73,7 @@ nav>ul {
   justify-content: space-between;
   color: #F06565;
   font-size: 3vw;
+  
 }
 
 nav>ul:hover li {
@@ -77,10 +83,14 @@ nav>ul:hover li {
 
 nav>ul li:hover {
   opacity: 1;
+  text-shadow: 3px 3px black;
+  text-decoration: underline;
+  text-underline-offset: 10px;
 }
 
 nav>ul>a>li {
   padding: 0 20px;
+  transition: 200ms;
 }
 
 
@@ -107,6 +117,18 @@ nav>ul>a>li {
   justify-content: center;
   border: 8px solid black;
   z-index: 1;
+  transition: 400ms;
+}
+
+.hero>div>p {
+  transition: 400ms;
+}
+
+.hero>div:hover, .hero>div>p:hover {
+ transform: scale(1.08);
+ transition: 400ms;
+ text-shadow: 2px 2px salmon;
+ text-decoration: underline;
 }
 
 .hero>div>p {
@@ -122,6 +144,7 @@ nav>ul>a>li {
   left: 35%;
   top: -150px;
   z-index: 4;
+  transition: 200ms;
 }
 
 
@@ -130,12 +153,21 @@ nav>ul>a>li {
 
 .locations {
   background-color: #96715D;
+  
+  padding-top: 80px;
 }
 
 .locations>h2 {
   font-size: 3.5em;
+  text-shadow: 2px 2px salmon;
+  background-color: white;
+  margin: 0 auto;
+  /* width: 600px; */
+  width: fit-content;
+  padding: 0 20px;
   text-align: center;
-  padding-top: 80px;
+  border-radius: 20px;
+margin-top: 30px;
 }
 
 .locations>h2:before {
@@ -150,7 +182,6 @@ nav>ul>a>li {
 .locations>ul {
   display: flex;
   justify-content: space-around;
-  background-color: lightcoral;
   width: 85%;
   height: 200px;
   margin: 20px auto;
@@ -164,11 +195,13 @@ nav>ul>a>li {
   background-color: #CCE7FF;
   display: grid;
   place-items: center;
+  transition: 500ms;
 }
 
 .locations>ul>li:hover {
   background-color: white;
   transition: 500ms;
+  box-shadow: 3px 3px black;
 }
 
 
@@ -176,8 +209,9 @@ nav>ul>a>li {
   font-size: 3.5em;
   position: relative;
   right: 20%;
-  margin-top: 80px;
+  margin-top: 100px;
   text-align: center;
+  top: 165px;
 }
 
 .listings {
@@ -258,6 +292,11 @@ table td {
   text-align: center;
 }
 
+table td:hover, table th:hover {
+  transition: 300ms;
+  transform: scale(1.2);
+}
+
 tfoot {
   font-weight: bold;
 }
@@ -303,11 +342,14 @@ input[type=submit] {
   border-radius: 40px;
   margin-top: 20px;
   margin-bottom: 50px;
+  transition: 500ms;
 }
 
 input[type=submit]:hover {
   background-color: white;
   transition: 500ms;
+  text-shadow: 2px 2px salmon;
+  box-shadow: 10px 10px black;
  
 }
 
